styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pixelify+Sans:wght@400..700&display=swap");
// @import "/node_modules/@solana/wallet-adapter-react-ui/styles.css";
@import "../styles/snow.scss";

$breakpoints: (
  "mobile": 767px,
  "md": 667px,
  "lg": 1024px,
  "xl": 1280px,
  "2xl": 1536px,
  "3xl": 2300px,
);

$custom-background: linear-gradient(90.26deg, #c1260f 0.34%, #ee642a 96.66%);

@mixin device($breakpoint) {
  @if $breakpoint == "mobile" {
    @media (max-width: map-get($breakpoints, $breakpoint)) {
      @content;
    }
  } @else if map-has-key($breakpoints, $breakpoint) {
    @media (min-width: map-get($breakpoints, $breakpoint)) {
      @content;
    }
  } @else {
    @warn "Unknown breakpoint: #{$breakpoint}.";
  }
}

.pixelated {
  image-rendering: pixelated;
}

#__next {
  min-height: 100%;
}

@media (max-width: 640px) {
  html {
    font-size: calc(100vw / 25);
  }

  .video > div:not(.play-handler) {
    width: 100vw;
  }
}

body,
html {
  margin: 0;
  padding: 0;
  height: 100%;
  @apply text-gray-800;
  font-family: "Nunito", sans-serif;
  background: #c4e2fc;
  overscroll-behavior: contain;
  overflow: hidden;
  touch-action: pan-x pan-y;
}

*,
*:hover {
  cursor: url("/cursor/cursor.png"), auto;
}
html {
  scroll-behavior: smooth;
}

.container {
  @apply m-auto max-w-[94rem] px-4 md:px-8 2xl:px-0;

  &.no-p-mobile {
    @include device(mobile) {
      padding: 0 !important;
    }
  }
}

.container-padding {
  @apply px-4 md:px-8 2xl:px-0;
}

@keyframes transition-animation {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.transition-animation {
  animation: transition-animation 1s ease-in;
}

@keyframes expand-rev {
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: 200% 0;
  }
}
/* TITLE END */

.core {
  inset: 0;
  position: fixed;
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  background-position: center;
}

// SWIPER STYLES

.swiper {
  width: 100%;
  padding-top: 10px !important;
  padding-bottom: 45px !important;

  @include device("md") {
    padding-top: 25px !important;
    padding-bottom: 50pxpx !important;
  }

  @include device("lg") {
    padding-top: 25px !important;
    padding-bottom: 75px !important;
  }

  @include device("2xl") {
    padding-top: 25px !important;
    padding-bottom: 75px !important;
  }

  @include device("3xl") {
    padding-top: 25px !important;
    padding-bottom: 150px !important;
  }
}

:root {
  --swiper-pagination-color: linear-gradient(
      90.26deg,
      #c1260f 0.34%,
      #ee642a 96.66%
    ),
    linear-gradient(0deg, #fff7f7, #fff7f7) !important;
  --swiper-navigation-color: #ffffff !important;
  --swiper-pagination-bullet-inactive-color: #9966cc !important;
  --swiper-pagination-bottom: 8px;
}

.default-slider {
  .swiper-slide {
    width: 75% !important;

    @include device(md) {
      width: 50% !important;
    }

    @include device(xl) {
      width: 40% !important;
    }

    @include device("2xl") {
      width: 30% !important;
    }

    @include device("3xl") {
      width: 25% !important;
    }
  }
}

.column-slider {
  .swiper-slide {
    @include device(md) {
      width: 75% !important;
    }

    @include device(xl) {
      width: 70% !important;
    }

    @include device("2xl") {
      width: 65% !important;
    }

    @include device("3xl") {
      width: 60% !important;
    }
  }
}
.swiper-pagination {
  margin-bottom: -10px !important;
  &-bullet {
    width: 15px !important;
    height: 15px !important;
  }
  &-bullet-active {
    width: 20px !important;
    height: 20px !important;
  }
}
// SWIPER STYLES END

// CUSTOM SCROLLBAR START

::-webkit-scrollbar {
  width: 16px;
}

::-webkit-scrollbar-thumb {
  background: #d5f4e5;
  border-radius: 0.5rem;
}

::-webkit-scrollbar-track {
  background: transparent;
}

// CUSTOM SCROLLBAR END

// COOL BORDER START

// COOL BORDER END

.animate-border {
  --border-angle: 0turn; // For animation.
  --main-bg: conic-gradient(
    from var(--border-angle),
    #ee642a,
    #c1260f 5%,
    #ee642a 60%,
    #8726b7 95%
  );

  border-radius: 24px;
  --gradient-border: conic-gradient(
    from var(--border-angle),
    transparent 25%,
    #c1260f,
    #8726b7 99%,
    transparent
  );
  border: solid 5px transparent;
  @include device(md) {
    border: solid 10px transparent;
  }

  background: 
    // padding-box clip this background in to the overall element except the border.
    var(--main-bg) padding-box,
    // border-box extends this background to the border space
    var(--gradient-border) border-box,
    // Duplicate main background to fill in behind the gradient border. You can remove this if you want the border to extend "outside" the box background.
    var(--main-bg) border-box;

  animation: bg-spin 3s linear infinite;
  @keyframes bg-spin {
    to {
      --border-angle: 1turn;
    }
  }

  transform: translateY(6%);
}

@property --border-angle {
  syntax: "<angle>";
  inherits: true;
  initial-value: 0turn;
}

//CUSTOM GRADIENT TEXT

.custom-gradient-text {
  background: -webkit-linear-gradient(90.26deg, #c1260f 0.34%, #ee642a 96.66%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hover\:custom-gradient-text:hover {
  background: -webkit-linear-gradient(90.26deg, #c1260f 0.34%, #ee642a 96.66%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

$n: 20;

.slider {
  height: 80px;
  margin: auto;
  width: 100%;
  max-width: 100vw;
}
/* ... */

